# Planes

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  emscripten_cmake.sh
asset_sources/: engine_sound.aup  gun_sound.aup  toy-biplane.blend
asset_sources/engine_sound_data/eff/d1f/: eff1f43b.au  eff1f73f.au  eff1f7fa.au  eff1f907.au  eff1fb5e.au
asset_sources/gun_sound_data/eff/d1f/: eff1f906.au
sources/: Angle256.cpp  Angle256.h  Bullet.cpp  Bullet.h  CloudSystem.cpp  CloudSystem.h  DrawingUtilities.h  GameWindow.h  Plane.cpp  Plane.h  VectorMath.h  index.html  main.cpp
